SET(ENCRYPTION_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET(ENCRYPTION_INCLUDE_DIRECTORY ${ENCRYPTION_INCLUDE_DIRECTORY} PARENT_SCOPE)

INCLUDE_DIRECTORIES (
    ./include
)

IF(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/win32/)
ELSEIF(CMAKE_SYSTEM_NAME STREQUAL "WindowsCE")
    INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/wince/)
    INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/wince/)
ENDIF()

SET(SOURCES
    ./src/Base64.cpp
    ./src/hashing.cc
)

IF(CMAKE_SYSTEM_NAME STREQUAL "Windows" OR CMAKE_SYSTEM_NAME STREQUAL "WindowsCE")
    SET(LIBRARIES ssleay32 libeay32)
ELSE()
    SET(LIBRARIES crypto)
ENDIF()

ADD_LIBRARY(encryption ${SOURCES})
TARGET_LINK_LIBRARIES(encryption ${LIBRARIES})
